fixing white space bottom page

--- a/src/styles/components/layout.module.scss
+++ b/src/styles/components/layout.module.scss
@@ -1,4 +1,5 @@
 .layout {
+  position:absolute;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -27,5 +28,6 @@
   }
   .content {
     margin-left: clamp(300px, 20%, 20%);
+    height:100%;
   }
 }
